--- a/CabifyChallengeTCA.xcodeproj/xcshareddata/xcschemes/CabifyChallengeTCA.xcscheme
+++ b/CabifyChallengeTCA.xcodeproj/xcshareddata/xcschemes/CabifyChallengeTCA.xcscheme
@@ -30,8 +30,7 @@
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "EED116F529A0454A009D939E"
